docs/7.57/md/abenstring_templates_abexas.md
---
title: "Continue"
description: |
  !Example(exa.gif 'Example') string_tmpl - Specified Length(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_width_abexa.htm) !Example(exa.gif 'Example') string_tmpl - Alignments and Padding(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_templates_abexas.htm"
abapFile: "abenstring_templates_abexas.htm"
keywords: ["do", "if", "case", "data", "abenstring", "templates", "abexas"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_working.htm) →  [Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_string.htm) →  [Expressions and Functions for String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_processing_expr_func.htm) →  [String Expressions (string\_exp)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapcompute_string.htm) →  [string\_exp - String Templates (string\_tmpl)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_templates.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: string_tmpl - Examples, ABENSTRING_TEMPLATES_ABEXAS, 757%0D%0A%0D%0AError:%0D%0A%0D%0
A%0D%0A%0D%0ASuggestion for improvement:)

string\_tmpl - Examples

Continue
![Example](exa.gif "Example") [string\_tmpl - Specified Length](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_width_abexa.htm)
![Example](exa.gif "Example") [string\_tmpl - Alignments and Padding](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_align_abexa.htm)
![Example](exa.gif "Example") [string\_tmpl - Case](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_case_abexa.htm)
![Example](exa.gif "Example") [string\_tmpl - Sign](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_sign_abexa.htm)
![Example](exa.gif "Example") [string\_tmpl - asXML Format](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_xsd_abexa.htm)
![Example](exa.gif "Example") [string\_tmpl - Strings of Digits](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_alpha_abexa.htm)
![Example](exa.gif "Example") [string\_tmpl - Formatting Settings](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_user_abexa.htm)
![Example](exa.gif "Example") [string\_tmpl - Time Zones](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_timezone_abexa.htm)
![Example](exa.gif "Example") [string\_tmpl - Number Formats](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_number_abexa.htm)
![Example](exa.gif "Example") [string\_tmpl - Date Formats](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_date_abexa.htm)
![Example](exa.gif "Example") [string\_tmpl - Time Formats](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_time_abexa.htm)
![Example](exa.gif "Example") [string\_tmpl - Time Stamp Formats](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_utc_abexa.htm)
![Example](exa.gif "Example") [string\_tmpl - Control Characters](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_ctrlchar_abexa.htm)